# libmpd-haskell

./: libmpd.cabal
