Name:               libmpd
Version:            0.8.0.5
Synopsis:           An MPD client library.
Description:        A client library for MPD, the Music Player Daemon
                    (<http://www.musicpd.org/>).
Category:           Network, Sound

License:            LGPL
License-file:       LICENSE
Copyright:          Ben Sinclair 2005-2009, Joachim Fasting 2014
Author:             Ben Sinclair

Maintainer:         Joachim Fasting <joachim.fasting@gmail.com>
Stability:          beta
Homepage:           http://github.com/joachifm/libmpd-haskell#readme
Bug-reports:        http://github.com/joachifm/libmpd-haskell/issues

Tested-With:        GHC == 7.0.2
Build-Type:         Simple
Cabal-Version:      >= 1.10

Extra-Source-Files:
    README.md
    NEWS
    tests/Arbitrary.hs
    tests/CommandSpec.hs
    tests/EnvSpec.hs
    tests/Defaults.hs
    tests/ParserSpec.hs
    tests/StringConn.hs
    tests/TestUtil.hs
    tests/Unparse.hs
    tests/UtilSpec.hs
    tests/Main.hs

Source-Repository head
    type:       git
    location:   https://github.com/joachifm/libmpd-haskell

Library
    Default-Language:   Haskell2010

    Build-Depends:
        -- Platform dependencies
        base >= 4 && < 5
      , attoparsec >= 0.10.1 && < 1
      , bytestring >= 0.9 && < 1
      , containers >= 0.3 && < 1
      , filepath >= 1 && < 2
      , mtl >= 2.0 && < 3
      , old-locale >= 1 && < 2
      , text >= 0.11 && < 2
      , time >= 1.1 && < 2

        -- Additional dependencies
      , data-default >= 0.4 && < 1
      , network >= 2.1 && < 3
      , utf8-string >= 0.3.1 && < 1

    Exposed-Modules:
        Network.MPD
      , Network.MPD.Commands.Extensions
      , Network.MPD.Core

    Other-Modules:
        Network.MPD.Core.Class
      , Network.MPD.Core.Error
      , Network.MPD.Commands
      , Network.MPD.Commands.Arg
      , Network.MPD.Commands.Parse
      , Network.MPD.Commands.Query
      , Network.MPD.Commands.Types
      , Network.MPD.Commands.Util
      , Network.MPD.Util

    ghc-prof-options:   -auto-all -prof
    ghc-options:        -Wall

Test-Suite specs
    type:               exitcode-stdio-1.0
    Default-Language:   Haskell2010
    Main-Is:            tests/Main.hs
    Hs-Source-Dirs:     . tests
    cpp-options:        -DTEST
    ghc-options:        -fno-warn-missing-signatures

    Build-Depends:
        -- Platform dependencies
        base
      , attoparsec
      , bytestring
      , containers
      , filepath
      , mtl
      , old-locale
      , text
      , time

        -- Additional dependencies
      , data-default
      , network
      , utf8-string

        -- Test dependencies
      , unix
      , QuickCheck >= 2.1
      , hspec
      , HUnit
